--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "mongodb": "^6.7.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
     "toastify": "^2.0.1"
